[gd_scene load_steps=8 format=3 uid="uid://1fe5amq3ksma"]

[ext_resource type="Theme" uid="uid://dcw22i5c3dse4" path="res://Design/Themes/ThemeAttributs.tres" id="1_cc0yb"]
[ext_resource type="Script" path="res://Script/CanvasPresentationAttributs.gd" id="2_3kyro"]
[ext_resource type="Theme" uid="uid://c2oksi2eb0sxy" path="res://Design/Themes/themeTest.tres" id="3_815qv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2do2n"]
bg_color = Color(0.380392, 0.380392, 0.380392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o46t0"]
bg_color = Color(0.333333, 0.333333, 0.333333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohf6j"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55wg1"]
bg_color = Color(0.611765, 0.611765, 0.611765, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="CanvasPresentationAttributs" type="Control"]
custom_minimum_size = Vector2(520, 250)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_cc0yb")
script = ExtResource("2_3kyro")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2do2n")

[node name="NomAtomeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "NomAtome"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(10, 35, 490, 35)
width = 3.0
default_color = Color(0.345098, 0.345098, 0.345098, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
offset_top = 50.0
offset_right = 500.0
offset_bottom = 50.0
size_flags_horizontal = 3
alignment = 1

[node name="Line2D2" type="Line2D" parent="."]
points = PackedVector2Array(10, 235, 490, 235)
width = 3.0
default_color = Color(0.345098, 0.345098, 0.345098, 1)

[node name="PanelForUnlock" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o46t0")

[node name="Panel" type="Panel" parent="PanelForUnlock"]
custom_minimum_size = Vector2(250, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ohf6j")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelForUnlock"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="PanelForUnlock/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_815qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_55wg1")
text = "Unlock"

[node name="AtomeLabel" type="Label" parent="PanelForUnlock/VBoxContainer"]
layout_mode = 2
text = "Atome"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrixLabel" type="Label" parent="PanelForUnlock/VBoxContainer"]
layout_mode = 2
text = "Prix"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelForUnlock/VBoxContainer/Button" to="." method="OnUnlockButtonPressed"]
